Makeshift fixed prism.js issue in piano.js article. update piano.js article.

--- a/pages/piano-js-lib/style.css
+++ b/pages/piano-js-lib/style.css
@@ -1,3 +1,7 @@
 .piano-wrapper {
     margin: 10px auto;
 }
+
+.github-mark {
+    height: 1em;
+}
